@@ -1,3 +1,10 @@
+//
+// This file is part of the Marble Desktop Globe.
+//
+// This program is free software licensed under the GNU LGPL. You can
+// find a copy of this license in LICENSE.txt in the top directory of
+// the source code.
+
 #include "jsonparser.h"
 
 jsonParser::jsonParser()
